# Project-OpenWeather

./: README.md  app.py  beginings.ipynb  colab_weather.ipynb  colab_weather2.ipynb  colab_weather_sh.ipynb  json.ipynb  main.py  param_defolt.json  pyproject.toml  requirements.txt  weather_lib.py
